API to enable group admins to make a withdrawal request
