# routes/v1/payment.php
@@ -13,6 +13,9 @@ Route::group(['prefix'=>'user/payment'],function(){
     //Tip:: Contribute to a scheme
     Route::post("group/contribute",[P2PTransactionController::class,"member_contribute"]);
 
+    //Tip:: Make withdrawal request
+    Route::get("make/withdrawal/request/{group_uuid}",[P2PTransactionController::class, "withdrawal_request"]);
+
     //Tip:: Extract all the contributions made for a specific group
     Route::get("group/contributions/{group_uuid}",[P2PTransactionController::class,"list_all_group_contributions"]);
 
